# calcul

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  README.txt  docker-compose.yml  polar.txt  railway.toml  resend.txt  start.bat  stop.bat
.serena/: project.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  backend_server.spec  railway.json  railway.toml  requirements.txt  run_server.py  test_auth.py  test_output.txt  test_secured_api.py
backend-ai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-ai/alembic/: env.py
backend-ai/alembic/versions/: 001_initial_schema.py
backend-ai/app/: main.py
backend-ai/app/api/: chat.py  health.py
backend-ai/app/core/: config.py
backend-ai/app/db/: database.py
backend-ai/app/services/: agent.py  graph.py  law_api.py  llm.py  prompts.py  rag.py  rate_limiter.py  tools.py  vector_store.py
backend-spring/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  gradlew  railway.toml  run-tests.sh  settings.gradle.kts  test-scenarios.http
docs/: API_REFERENCE.md  CLOUDFLARE_ENV_FIX.md  CLOUDFLARE_ENV_QUICK_FIX.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  NEXT_PHASE_WORKFLOW.md  PRD_PAYROLL_LEDGER.md  PROJECT_ANALYSIS_REPORT.md  RAILWAY_DEPLOYMENT.md  README.md  SuperClaude_Agents_Guide_Korean.md  code-analysis-report.md  todo_list.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: .env.example  .env.production  Dockerfile  build_errors.txt  (+7 more)
(+415 files in other folders)
